able to make; however, it's not building the right thing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,17 +14,19 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wshadow -Werror")
 
 # Add our include directory to CMake's search paths.
 # THIS IS REQUIRED
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${PROJECT_SOURCE_DIR}/include)
 
-# Create library from dyn_array so we can use it later.
-add_library(dyn_array dyn_array.c)
-
-# Compile the analysis executable.
 set(SOURCES
     src/analysis.c
     src/dyn_array.c
     src/process_scheduling.c
 )
+
+# Create library from dyn_array so we can use it later.
+add_library(dyn_array ${SOURCES})
+
+# Compile the analysis executable.
+
 add_executable(analysis ${SOURCES})
 
 # link the dyn_array library we compiled against our analysis executable.
