I think this is checkpoint 1 done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,24 +16,17 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wshadow -Werror")
 # THIS IS REQUIRED
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
-set(SOURCES
-    src/analysis.c
-    src/dyn_array.c
-    src/process_scheduling.c
-)
-
 # Create library from dyn_array so we can use it later.
-add_library(dyn_array ${SOURCES})
+add_library(dyn_array src/dyn_array.c)
 
 # Compile the analysis executable.
-
-add_executable(analysis ${SOURCES})
+add_executable(analysis src/analysis.c)
 
 # link the dyn_array library we compiled against our analysis executable.
 target_link_libraries(dyn_array)
 
 # Compile the the tester executable.
-add_executable(${PROJECT_NAME}_test ${SOURCES})
+add_executable(${PROJECT_NAME}_test ../test/tests.cpp)
 
 target_compile_definitions(${PROJECT_NAME}_test PRIVATE)
 
