able to run tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,21 +12,21 @@ project(hw2)
 set(CMAKE_C_FLAGS "-std=c11 -Wall -Wextra -Wshadow -Werror")
 set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wshadow -Werror")
 
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 # Add our include directory to CMake's search paths.
 # THIS IS REQUIRED
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 # Create library from dyn_array so we can use it later.
 add_library(dyn_array src/dyn_array.c)
+add_library(process_scheduling src/process_scheduling.c)
 
 # Compile the analysis executable.
 add_executable(analysis src/analysis.c)
 
 # link the dyn_array library we compiled against our analysis executable.
 target_link_libraries(dyn_array)
+target_link_libraries(process_scheduling)
+target_link_libraries(analysis dyn_array)
 
 # Compile the the tester executable.
 add_executable(${PROJECT_NAME}_test ../test/tests.cpp)
@@ -34,4 +34,4 @@ add_executable(${PROJECT_NAME}_test ../test/tests.cpp)
 target_compile_definitions(${PROJECT_NAME}_test PRIVATE)
 
 # Link ${PROJECT_NAME}_test with dyn_array and gtest and pthread libraries
-target_link_libraries(${PROJECT_NAME}_test gtest pthread dyn_array)
+target_link_libraries(${PROJECT_NAME}_test gtest pthread dyn_array process_scheduling)
