--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,10 @@ include_directories(${PROJECT_SOURCE_DIR}/include)
 
 # Create library from dyn_array so we can use it later.
 add_library(dyn_array src/dyn_array.c)
+add_library(process_scheduling src/process_scheduling.c)
 
 # Compile the analysis executable.
-add_executable(analysis src/analysis.c)
+add_executable(analysis src/analysis.c src/process_scheduling.c)
 
 # link the dyn_array library we compiled against our analysis executable.
 target_link_libraries(dyn_array)
